--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,26 @@
+annotated-types==0.7.0
+anyio==3.7.1
+click==8.1.7
+ecdsa==0.19.0
 fastapi==0.103.2
-sqlmodel==0.0.14
-uvicorn==0.23.2
+h11==0.14.0
+idna==3.10
+passlib==1.7.4
+pika==1.3.2
+pyasn1==0.6.1
+pydantic==2.9.2
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
+pyotp==2.9.0
 python-dotenv==1.0.0
 python-jose==3.3.0
-passlib==1.7.4
 python-multipart==0.0.6
-pydantic==2.4.2
-pydantic-settings==2.0.3
-pyotp==2.9.0
+rsa==4.9
+setuptools==75.3.0
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+sqlmodel==0.0.14
+starlette==0.27.0
+typing_extensions==4.12.2
+uvicorn==0.23.2
