--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,4 +21,4 @@ RUN pnpm run build
 EXPOSE 5173
 
 # Start the application
-CMD ["npm", "run", "dev", "--", "--host"]
+CMD ["pnpm", "run", "dev", "--", "--host"]
