--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,52 +2,21 @@ version: '3.8'
 
 services:
   backend:
-    build: 
+    build:
       context: ./backend
-    env_file:
-      - .env
-    ports:
-      - "8000:8000"
-    networks:
-      - app-network
+    image: ansarisaif1/probo-backend:latest
 
   frontend:
-    build: 
+    build:
       context: ./frontend
-    env_file:
-      - .env
-    ports:
-      - "3000:3000"
-    depends_on:
-      - backend
-    networks:
-      - app-network
+    image: ansarisaif1/probo-frontend:latest
 
   websocket:
-    build: 
+    build:
       context: ./websocket
-    env_file:
-      - .env
-    ports:
-      - "9000:9000"
-    depends_on:
-      - backend
-    networks:
-      - app-network
+    image: ansarisaif1/probo-websocket:latest
 
   consumers:
-    build: 
+    build:
       context: ./consumers
-    env_file:
-      - .env
-    depends_on:
-      - backend
-      - websocket
-    networks:
-      - app-network
-    
-
-
-networks:
-  app-network:
-    driver: bridge 
+    image: ansarisaif1/probo-consumers:latest
