--- a/k8/service.yml
+++ b/k8/service.yml
@@ -1,12 +1,47 @@
+---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: frontend-service
 spec:
   selector:
-    app: nginx
+    app: frontend
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 3000
   type: LoadBalancer
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-service
+  labels:
+    app: backend
+spec:
+  selector:
+    app: backend
+  ports:
+    - protocol: TCP
+      port: 8000
+      targetPort: 8000
+  type: LoadBalancer
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: websocket-service
+  labels:
+    app: websocket
+spec:
+  selector:
+    app: websocket
+  ports:
+    - protocol: TCP
+      port: 9000
+      targetPort: 9000
+  type: LoadBalancer
+
