--- a/k8/service.yml
+++ b/k8/service.yml
@@ -1,5 +1,4 @@
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -27,7 +26,8 @@ spec:
     - protocol: TCP
       port: 8000
       targetPort: 8000
-  type: LoadBalancer
+      nodePort: 30001
+  type: NodePort
 
 ---
 apiVersion: v1
@@ -44,4 +44,3 @@ spec:
       port: 9000
       targetPort: 9000
   type: LoadBalancer
-
