--- a/k8/service.yml
+++ b/k8/service.yml
@@ -2,6 +2,20 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: frontend-service
+spec:
+  selector:
+    app: frontend
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
+  type: LoadBalancer
+  
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: backend-service
   labels:
     app: backend
